---
source: src/tests/mod.rs
expression: ast
input_file: src/tests/source_files/variable_decls.lv
---
Program(
    [
        Expression {
            span: Span {
                start: 0,
                end: 86,
            },
            kind: VariableDecl {
                name: "main",
                value: Expression {
                    span: Span {
                        start: 8,
                        end: 86,
                    },
                    kind: Function {
                        parameters: [],
                        return_type: None,
                        body: Expression {
                            span: Span {
                                start: 16,
                                end: 86,
                            },
                            kind: Block(
                                [
                                    Expression {
                                        span: Span {
                                            start: 21,
                                            end: 29,
                                        },
                                        kind: VariableDecl {
                                            name: "foo",
                                            value: Expression {
                                                span: Span {
                                                    start: 28,
                                                    end: 29,
                                                },
                                                kind: IntLiteral(
                                                    6,
                                                ),
                                            },
                                            mutable: false,
                                            ty: None,
                                        },
                                    },
                                    Expression {
                                        span: Span {
                                            start: 34,
                                            end: 42,
                                        },
                                        kind: VariableDecl {
                                            name: "bar",
                                            value: Expression {
                                                span: Span {
                                                    start: 41,
                                                    end: 42,
                                                },
                                                kind: IntLiteral(
                                                    7,
                                                ),
                                            },
                                            mutable: true,
                                            ty: None,
                                        },
                                    },
                                    Expression {
                                        span: Span {
                                            start: 47,
                                            end: 64,
                                        },
                                        kind: VariableDecl {
                                            name: "baz",
                                            value: Expression {
                                                span: Span {
                                                    start: 60,
                                                    end: 64,
                                                },
                                                kind: BoolLiteral(
                                                    true,
                                                ),
                                            },
                                            mutable: true,
                                            ty: Some(
                                                Ident(
                                                    "Bool",
                                                ),
                                            ),
                                        },
                                    },
                                    Expression {
                                        span: Span {
                                            start: 69,
                                            end: 84,
                                        },
                                        kind: VariableDecl {
                                            name: "qux",
                                            value: Expression {
                                                span: Span {
                                                    start: 82,
                                                    end: 84,
                                                },
                                                kind: Block(
                                                    [],
                                                ),
                                            },
                                            mutable: false,
                                            ty: Some(
                                                Ident(
                                                    "Unit",
                                                ),
                                            ),
                                        },
                                    },
                                ],
                            ),
                        },
                    },
                },
                mutable: false,
                ty: None,
            },
        },
    ],
)
